# AutoUpdatePip

./: .gitignore  README.md  pyproject.toml
docs/: TODO.md  pip_config.md  powershell_profile.md  python_dir.html
scripts/: build_and_push.sh  create_structure.sh  pip_update.ps1
src/: __init__.py  main.py  pip_batch_update.py  version.py
src/scripts/: pip_update.ps1  pip_update.sh
src/utils/: __init__.py  get_pip_cmds.py  log_utils.py
