[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools_scm]
write_to = "src/version.py"

[metadata]
name = "pip-batch-update"
version = "1.0.0"
author = "Thaddeus Thomas"
author_email = "thaddeus.r.thomas@gmail.com"
description = "A utility for batch updating pip packages"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/thomasthaddeus/pip-batch-update"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[options]
package_dir = {"" = "src"}
packages = "find:"
install_requires = []

[options.entry_points]
console_scripts =
    pip_update = "pip_batch_update: main"
